[Saurabh] Add Validation to Payroll DTO